sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: illegal start of simple pattern
var: pos=0
   ^AlgGnomeSort:4: error: '=' expected but ';' found.
while (pos!=getNombreValeurs-1) {
^